; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_show_result.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_show_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_list = type { %struct.merge_list* }

@merge_result = common dso_local global %struct.merge_list* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @show_result to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_result() #0 {
  %1 = alloca %struct.merge_list*, align 8
  %2 = load %struct.merge_list*, %struct.merge_list** @merge_result, align 8
  store %struct.merge_list* %2, %struct.merge_list** %1, align 8
  br label %3

3:                                                ; preds = %6, %0
  %4 = load %struct.merge_list*, %struct.merge_list** %1, align 8
  %5 = icmp ne %struct.merge_list* %4, null
  br i1 %5, label %6, label %14

6:                                                ; preds = %3
  %7 = load %struct.merge_list*, %struct.merge_list** %1, align 8
  %8 = call i32 @show_result_list(%struct.merge_list* %7)
  %9 = load %struct.merge_list*, %struct.merge_list** %1, align 8
  %10 = call i32 @show_diff(%struct.merge_list* %9)
  %11 = load %struct.merge_list*, %struct.merge_list** %1, align 8
  %12 = getelementptr inbounds %struct.merge_list, %struct.merge_list* %11, i32 0, i32 0
  %13 = load %struct.merge_list*, %struct.merge_list** %12, align 8
  store %struct.merge_list* %13, %struct.merge_list** %1, align 8
  br label %3

14:                                               ; preds = %3
  ret void
}

declare dso_local i32 @show_result_list(%struct.merge_list*) #1

declare dso_local i32 @show_diff(%struct.merge_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
